src/redturtle/prenotazioni/browser/static/redturtle-reservation.css
/*
 * RG Prenotazioni Styles
 */
.floatleft {
  float: left;
}
.floatright {
  float: right;
}

#plone-contentmenu-workflow .state-refused {
  padding: 0 0.5em;
  background-color: #870000;
  border: 0.1em solid #870000;
  color: white !important;
  border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
  -moz-border-radius: 0.5em;
}

td.selected {
  background-color: #fefefe;
}

.template-prenotazione_add .field input[type="text"] {
  width: 100%;
}

#content .tipology_widget p.formHelp {
  margin: 0;
}
#content .tipology_widget label {
  display: block;
  float: left;
  width: 50%;
  min-width: 200px;
}

#content .tipology_widget div.value {
  margin-bottom: 1em;
}

#content .tipology_widget .unbookable {
  margin: 1em 0;
  padding: 1em;
  border: 1px solid #993;
  background-color: #ffffe3;
}

#content .tipology_widget .unbookable ul li {
  float: left;
  width: 50%;
  min-width: 200px;
}

.template-prenotazione_print table.listing {
  border-top: 1px solid #ddd;
}

.template-prenotazione_print p {
  line-height: 250%;
}

.template-prenotazione_print .actions {
  margin: 2em 1em;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.template-prenotazioni_search #widgets-review_state option[value="private"],
.template-prenotazioni_search .search_parameters {
  display: none;
}

.template-prenotazioni_search table tr.pending {
  border-left: 2px solid #e2e721;
}
.template-prenotazioni_search table tr.published {
  border-left: 2px solid #007bb3;
}
.template-prenotazioni_search table tr.refused {
  border-left: 2px solid #870000;
}
.template-prenotazioni_search .search_states ul {
  list-style: none;
}
.template-prenotazioni_search .search_states ul li::before {
  content: "\2022";
  font-weight: bold;
  display: inline-block;
  width: 1em;
  margin-left: -1em;
  font-size: 20px;
}
.template-prenotazioni_search .search_states ul li.pending::before {
  color: #e2e721;
}
.template-prenotazioni_search .search_states ul li.published::before {
  color: #007bb3;
}
.template-prenotazioni_search .search_states ul li.refused::before {
  color: #870000;
}

.template-prenotazioni_search .download {
  float: right;
}

@media print {
  .template-prenotazioni_search .search_states,
  .template-prenotazione_print #portal-top,
  .template-prenotazione_print .actions,
  .template-prenotazioni_search .download,
  #viewlet-below-content,
  .view-name-prenotazioni_search,
  .search-result-wrapper h2 {
    display: none;
  }
  .template-prenotazioni_search .search_parameters {
    display: block;
  }
  .template-prenotazioni_search table tr {
    border-left: none !important;
  }
}

/** Week view styles **/
#week-table-wrapper * {
  box-sizing: border-box;
}
#week-table-wrapper {
  overflow: scroll;
}

#week-table-wrapper .table-title {
  color: #525252;
}

table#week {
  margin: auto;
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
  min-width: 50%;
}

#week caption {
  padding: 0.3em 1em;
  margin-bottom: 0.5em;
  border: 1px solid #dddddd;
}

#week .day {
  min-width: 150px;
}

.flex-wrap {
  display: flex;
  flex-wrap: wrap;
}

@media screen and (max-width: 390px) {
  .actions .button {
    margin-bottom: 18px;
  }
}

#week caption a {
  text-decoration: none;
  border-bottom: none;
}

table#week th {
  text-align: center;
  font-weight: bold;
  border: 1px solid #ddd;
  width: auto;
}
table#week div.table_header {
  text-align: center;
  font-weight: bold;
  border-bottom: 1px solid #ddd;
  width: auto;
  padding-bottom: 14px;
}

table#week td {
  text-align: center;
  vertical-align: top;
  border: 1px solid #ddd;
}

#week td h3 {
  font-size: 1em;
  width: 100%;
}

#content #week td div.gate {
  float: left;
  vertical-align: middle;
  background-color: #fff;
  border-right: 1px solid #fff;
}
#content #week td div.gate:last-of-type {
  border-right: none;
}

#content #week td div.gate > a {
  overflow: hidden;
  display: block;
  padding: 0.3em 5%;
}
#week .navigator {
  display: flex;
  justify-content: space-between;
}

#week .navigator .resize {
  display: none;
}

#week .fromto {
  background-color: #ddd;
}
#week .gatesheader {
  border-bottom: 1px solid #ddd;
}
#week .gateswrapper {
  border-bottom: 1px solid #ddd;
  margin-bottom: 1em;
  clear: both;
}
#week .gates {
  margin-left: 32px;
  position: relative;
}

#week [class^="icon-"]:before,
#week [class*=" icon-"]:before,
.week-legend [class*="icon-"]:before,
.week-legend [class*=" icon-"]:before {
  font-family: unset;
  font-weight: unset;
}

/* barra ora */
#week .gates > .hours {
  width: 34px;
  position: absolute;
  left: -34px;
  overflow: hidden;
}

#week .gates > .hours > .hour {
  height: 61px;
  text-align: center;
  margin-left: 1px;
  border: 1px solid #ddd;
  border-bottom-width: 0;
  position: relative;
}

#week .gates > .hours > .hour > div {
  position: absolute;
  top: 20px;
  width: 100%;
}

#content #week td div.interval,
#content #week td div.stormyinterval {
  font-weight: bold;
}

/* hide calendar entries */
dl.portlet ul.navTree li a.contenttype-prenotazioniyear,
dl.portlet ul.navTree li a.contenttype-prenotazioniweek,
dl.portlet ul.navTree li a.contenttype-prenotazioniday {
  display: none;
}

#week .slot a {
  text-decoration: none;
  border-bottom: none;
}

#week .slot > .unbookable {
  background-color: #ffa500;
}
#week .slot > .refused {
  background-color: #870000;
  color: white;
}

#week .slot > .refused a,
#week .slot > .published a {
  color: white;
}

#week .slot > .pending {
  background-color: #ffa500;
  color: white;
}

#week .slot > .published {
  background-color: #436976;
  color: white;
}
#week .slot .anonymous_slot {
  background-color: #fff;
  text-align: left;
  min-height: 1em;
  padding: 0.5em;
  border: none;
}

#week .slot.slot-odd .anonymous_slot {
  background-color: #eee;
}

#week .slot .anonymous_slot .busy_slot {
  font-weight: normal;
}

#week .slot .links > * {
  height: 5px;
  display: block;
}

#week .slot .links a.oclock {
  height: 6px;
  display: block;
  border-top: 1px solid #eee;
}

#week .slot .links a:link {
  background-color: #ddd;
}
#week .slot .links a:visited {
  background-color: #ddd;
}
#week .slot .links a:hover {
  background-color: #666;
}
#week .slot .links > .previous {
  background-color: #fff;
}

.template-prenotazioni_search #text {
  width: 90%;
  min-width: 200px;
  max-width: 400px;
}
.template-prenotazioni_search #formfield-start,
.template-prenotazioni_search #formfield-end {
  float: left;
  clear: none;
  margin-right: 2em;
}

.template-prenotazioni_search #formfield-start,
.template-prenotazioni_search #formfield-end {
  margin-top: 0;
  font-size: 100%;
}

#content .search-result-wrapper {
  padding-top: 20px;
}

#content .search-result-wrapper a.link-overlay {
  border-bottom: none !important;
}

/** gestione legenda utente **/
.week-legend {
  float: left;
  width: 49%;
  min-width: 200px;
  margin-top: 1em;
  padding-right: 2em;
}

@media screen and (max-width: 460px) {
  .week-legend {
    width: 100%;
  }
  .legend.legend-manager {
    padding: 0;
  }
}

.week-legend fieldset {
  padding: 0px;
}
.week-legend fieldset legend {
  padding: 0px;
  font-weight: bold;
  font-size: 100%;
}
#content .week-legend fieldset ul.legend {
  list-style-type: none;
}
.week-legend div.square {
  display: block;
  float: left;
  width: 15px;
  height: 15px;
  margin-right: 5px;
}
.legend li > .bookable {
  background: #ddd;
}

.week-legend div.square.unbookable {
  width: 13px;
  height: 13px;
  background: #fff;
  border: 1px solid #999;
}

.legend-manager li > .pending {
  background: #ffa500;
}
.legend-manager li > .confirmed {
  background: #436976;
}
.legend-manager li > .refused {
  background: #870000;
}

#content table.tipology-table {
  border: 1px solid #ccc;
}
#content table.tipology-table th {
  background-color: #ddd;
  padding: 3px 10px;
}
#content table.tipology-table td {
  padding: 2px 10px 0px 10px;
}

#week .fromto {
  background-color: #ddd;
}

#content-core #week {
  font-size: 100%;
}

#week .gate > .slot > .published {
  line-height: 0;
  font-size: 9px;
  background-color: #6da7bb;
}

#week .gate > .slot > .pending {
  line-height: 0;
  font-size: 9px;
  background-color: #ffa500;
}

#week .gate > .slot > .pause_slot {
  /* line-height: 0; */
  font-size: 9px;
  background-color: #e8e578;
  /* padding: 10px; */
}

#week .slot > .pending > a > div {
  border: 2px solid #e78b36;
  display: table;
  height: 100%;
  width: 100%;
}
#week .slot > .published > a > div {;
  display: table;
  height: 100%;
  width: 100%;
}


#week .slot .links a {
  height: 5px;
  display: block;
}

#legend .legend-note {
  margin-top: 10px;
}

#week .slot .pending [class^="icon-"] {
  color: black;
  padding-left: 2px;
  padding-right: 2px;
}

#week .slot .published [class^="icon-"] {
  color: black;
  padding-left: 2px;
  padding-right: 2px;
}

#week .slot .pending a:hover {
  background-color: rgb(236, 123, 0);
}
#week .slot .published a:hover {
  background-color: #9ac2dd;
}

dl.refused dd {
  background-color: #eebbbb;
  padding: 5px;
}
dl.portalMessage.refused dt {
  background-color: #870000;
  color: white;
  padding: 5px;
}

a.reservation-tooltip {
  position: relative;
}

a.reservation-tooltip:hover::before,
a.reservation-tooltip:focus::before {
  content: attr(data-title);
  position: absolute;
  top: -75px;
  width: 200px;
  display: block;
  background: #fff;
  left: auto;
  right: -100px;
  z-index: 1000;
  box-shadow: 0 0 5px #ccc;
  padding: 1rem;
}

.template-delete_reservation .actions {
  text-align: center;
  margin-top: 15px;
}

div.field input[type="radio"].required:after {
  content: "";
}

